--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "private": true,
   "dependencies": {
+    "@3kles/kles-material-datepicker": "18.0.2",
+    "@3kles/kles-material-moment-adapter": "18.0.0",
+    "@3kles/kles-material-luxon-adapter": "18.0.0",
     "@angular/animations": "^18.2.13",
     "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.13",
@@ -21,15 +24,11 @@
     "@angular/forms": "^18.2.13",
     "@angular/localize": "^18.2.13",
     "@angular/material": "^18.2.14",
-    "@angular/material-luxon-adapter": "^18.2.14",
-    "@angular/material-moment-adapter": "^18.2.14",
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "luxon": "^3.2.1",
-    "moment": "^2.24.0",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "xlsx": "^0.15.5",
